# core-types-descriptions

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
includes/basic-types/: ConditionalValue.hpp  TypeDescription-primitives.hpp
includes/empty-templates/: TypeDescription.hpp  TypeInfo.hpp
includes/interfaces/: IReaderWriter.hpp  ISerializer.hpp  SubType.hpp
